[package]
name = "onec-download-rs"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.40", default-features = false, features = ["derive", "env", "error-context", "help", "std", "usage"] }
scraper = { version = "0.24.0", default-features = false }
ureq = { version = "3.3.0", default-features = false, features = ["cookies", "rustls"] }
url = "2.5.7"
